--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:id="@+id/qqqq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:padding="@dimen/_10sdp"
         android:text="!!!!!!!!!!!!!!!!"
         app:layout_constraintBottom_toBottomOf="parent"
