Updation in model

--- a/app/src/main/res/layout/fragment_face_liveness.xml
+++ b/app/src/main/res/layout/fragment_face_liveness.xml
@@ -176,8 +176,9 @@
                 android:id="@+id/tvPoweredIpass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
                 android:fontFamily="@font/lato_semibold"
-                android:text="Powered by IPass"
+                android:text="Powered by iPass"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:textSize="@dimen/_10sdp"
